@@ -18,7 +18,6 @@ def destDir = project.findProperty('destDir')
 tasks.named('compileJava') {
   options.incremental = true
   options.release = 21
-  options.compilerArgs << '--add-modules' << 'jdk.incubator.vector'
   if (destDir) {
     destinationDirectory = file(destDir)
   }
